# DouyinLiveRecorder

./: .gitignore  DouyinLiveRecorder.spec  README.md  debug-recording-stalls-on-open.md  demo.py  main.py  pyproject.toml  requirements.txt
config/: config.ini
docs/: improvement-plan-2026-07-01.md  技术架构与实现细节.md  项目优化实施路线图.md
src/: __init__.py  cli_ui.py  config_loader.py  dashboard_disk_usage.py  dashboard_input.py  dashboard_state.py  dashboard_view.py  diagnostic_logging.py  logger.py  room.py  spider.py  stream.py  utils.py
src/http_clients/: __init__.py  async_http.py  client_pool.py  errors.py  runner.py  sync_http.py
src/javascript/: __init__.py  native_handlers.py  runtime.py
src/models/: __init__.py  config.py  enums.py  stream_info.py
src/recorder/: __init__.py  converter.py  ffmpeg_builder.py  models.py  pathing.py  pipeline.py  postprocess.py  process.py  segments.py
src/runtime/: __init__.py  app.py  config.py  coordinator.py  exit_wait.py  limiter.py  models.py  monitor.py  pacer.py  platform_probe.py  recording.py  runner.py  scheduler.py  shutdown.py  state.py  thread_host.py
src/uploader/: __init__.py  (+4 more)
tests/: test_build_spec_assets.py  test_cli_ui.py  test_config_loader.py  test_dashboard_disk_usage.py  test_dashboard_input.py  test_dashboard_state.py  test_dashboard_view.py  test_diagnostic_logging.py  test_direct_download.py  test_javascript_runtime_wiring.py  test_main_import.py  test_packaging_wiring.py  test_platform_payload_contract.py  test_stream_contract.py  test_stream_result_contract.py  test_url_config_parser.py  test_utils.py
(+75 files in other folders)
